--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                             <a class="btn btn-light" href="img/images/Projects/2-2-1.png.webp" data-lightbox="portfolio"><i
                                     class="fa fa-plus fa-2x text-primary"></i></a>
                             <div class="mt-auto">
-                                <small class="text-white"><i class="fa fa-folder me-2"></i>Web Design</small>
-                                <a class="h5 d-block text-white mt-1 mb-0" href="">Project Name</a>
+                                <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
+                                <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
                             </div>
                         </div>
                     </div>
@@ -342,8 +342,8 @@
                             <a class="btn btn-light" href="img/images/Projects/3-3.png.webp" data-lightbox="portfolio"><i
                                     class="fa fa-plus fa-2x text-primary"></i></a>
                             <div class="mt-auto">
-                                <small class="text-white"><i class="fa fa-folder me-2"></i>Web Design</small>
-                                <a class="h5 d-block text-white mt-1 mb-0" href="">Project Name</a>
+                                <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
+                                <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
                             </div>
                         </div>
                     </div>
@@ -356,8 +356,8 @@
                             <a class="btn btn-light" href="img/images/Projects/7-6-2.png.webp" data-lightbox="portfolio"><i
                                     class="fa fa-plus fa-2x text-primary"></i></a>
                             <div class="mt-auto">
-                                <small class="text-white"><i class="fa fa-folder me-2"></i>Web Design</small>
-                                <a class="h5 d-block text-white mt-1 mb-0" href="">Project Name</a>
+                                <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
+                                <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
                             </div>
                         </div>
                     </div>
