add name project2

--- a/index.html
+++ b/index.html
@@ -370,8 +370,8 @@
                             <a class="btn btn-light" href="img/images/Projects/shefaa.jpeg" data-lightbox="portfolio"><i
                                     class="fa fa-plus fa-2x text-primary"></i></a>
                             <div class="mt-auto">
-                                <small class="text-white"><i class="fa fa-folder me-2"></i>Web Design</small>
-                                <a class="h5 d-block text-white mt-1 mb-0" href="">Project Name</a>
+                                <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
+                                <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
                             </div>
                         </div>
                     </div>
@@ -384,8 +384,8 @@
                             <a class="btn btn-light" href="img/images/Initiatives/2-6.png" data-lightbox="portfolio"><i
                                     class="fa fa-plus fa-2x text-primary"></i></a>
                             <div class="mt-auto">
-                                <small class="text-white"><i class="fa fa-folder me-2"></i>Web Design</small>
-                                <a class="h5 d-block text-white mt-1 mb-0" href="">Project Name</a>
+                                <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
+                                <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
                             </div>
                         </div>
                     </div>
@@ -398,8 +398,8 @@
                             <a class="btn btn-light" href="img/images/Initiatives/4-1-1.png.webp" data-lightbox="portfolio"><i
                                     class="fa fa-plus fa-2x text-primary"></i></a>
                             <div class="mt-auto">
-                                <small class="text-white"><i class="fa fa-folder me-2"></i>Web Design</small>
-                                <a class="h5 d-block text-white mt-1 mb-0" href="">Project Name</a>
+                                <small class="text-white"><i class="fa fa-folder me-2"></i>عن المشروع</small>
+                                <a class="h5 d-block text-white mt-1 mb-0" href="">اسم المشروع</a>
                             </div>
                         </div>
                     </div>
@@ -937,12 +937,14 @@
                     <p><i class="fa fa-envelope me-3" style="direction: ltr;"></i> info@example.com</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h5 class="text-light mb-4">خدماتنا</h5>
-                    <a class="btn btn-link" href="" style="direction: ltr;"> من نحن</a>
-                    <a class="btn btn-link" href="">تواصل معنا</a>
-                    <a class="btn btn-link" href="">التبرعات</a>
-                    <a class="btn btn-link" href="">الحفلات والندوات</a>
-                    <a class="btn btn-link" href="">المساعدات</a>
+                    <h5 class="text-light mb-4">
+                            خدماتنا
+                    </h5>
+                    <a class="btn btn-link" href=""> من نحن </a>
+                    <a class="btn btn-link" href=""> تواصل معنا </a>
+                    <a class="btn btn-link" href=""> التبرعات</a>
+                    <a class="btn btn-link" href=""> الحفلات والندوات</a>
+                    <a class="btn btn-link" href=""> المساعدات</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-light mb-4">اهم الاخبار</h5>
@@ -985,8 +987,8 @@
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
     <script src="lib/parallax/parallax.min.js"></script>
+    <script src="lib/counterup/counterup.min.js"></script>
 
     <!-- JavaScript Libraries 2 -->
     <script src="agency-lib/agency-wow/wow.min.js"></script>
@@ -999,8 +1001,8 @@
 
     <!-- Template Javascript -->
     <script src="agency-js/agency-main.js"></script>
-    <script src="js/main.js"></script>
     <script src="js/count.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
