--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <div class="navbar-nav ms-auto p-4 p-lg-0" style="position: absolute; right: 265px;">
                     <a href="index.html" class="nav-item nav-link active">الرئيسية</a>
                     <a href="index.html" class="nav-item nav-link">مجلس ادارة الجمعية</a>
                     <a href="index.html" class="nav-item nav-link">الداعمين للجمعية</a>
