--- a/index.html
+++ b/index.html
@@ -61,15 +61,14 @@
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
             <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
                 <!--<h1 class="fw-bold text-primary m-0"> جمعية مهندسى <span class="text-white"> البترول والتعدين والغاز</span></h1>-->
-                <img class="w-50" src="img/images/logo/logo-removebg.png" alt="Image">
+                <img class="w-65" src="img/images/logo/logo-removebg.png" alt="Image">
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto p-4 p-lg-0" style="position: absolute; right: 265px;">
+                <div class="navbar-nav ms-auto p-4 p-lg-0" style="position: absolute; right: 365px;">
                     <a href="index.html" class="nav-item nav-link active">الرئيسية</a>
-                    <a href="index.html" class="nav-item nav-link">مجلس ادارة الجمعية</a>
                     <a href="index.html" class="nav-item nav-link">الداعمين للجمعية</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">الانشطة</a>
@@ -97,6 +96,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"> من نحن</a>
                         <div class="dropdown-menu m-0">
+                            <a href="service.html" class="dropdown-item"> مجلس ادارة الجمعية </a>
                             <a href="service.html" class="dropdown-item"> نشأة الجمعية</a>
                             <a href="donate.html" class="dropdown-item">اهداف الجمعية</a>
                         </div>
@@ -999,6 +999,7 @@
     
 
     <!-- JavaScript Libraries -->
+    <script src="lib/counterup/counterup.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
@@ -1006,7 +1007,6 @@
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/parallax/parallax.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
 
     <!-- JavaScript Libraries 2 -->
     <script src="agency-lib/agency-wow/wow.min.js"></script>
