add page object 2

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
     <link href="img/images/logo/logo-icon.png" rel="icon">
 
     <!-- Google Web Fonts -->
+     <!--
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Saira:wght@500;600;700&display=swap" rel="stylesheet"> -->
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -100,7 +106,7 @@
                         <div class="dropdown-menu m-0">
                             <a href="service.html" class="dropdown-item"> مجلس ادارة الجمعية </a>
                             <a href="service.html" class="dropdown-item"> نشأة الجمعية</a>
-                            <a href="Objectives.html" class="dropdown-item">اهداف الجمعية</a>
+                            <a href="objectives.html" class="dropdown-item">اهداف الجمعية</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">تواصل معنا</a>
@@ -616,7 +622,7 @@
                     <div class="position-relative overflow-hidden h-100" style="min-height: 400px;">
                         <img class="position-absolute w-100 h-100 pt-5 pe-5" src="img/images/img_5(2).png" alt="about" style="object-fit: cover; box-shadow: 0 8px 5px rgb(0 0 0 / 52%);">
 
-                        <img class="position-absolute top-0 end-0 bg-white ps-2 pb-2" src="img/images/videos/Screenshot20241225191425.png"
+                        <img class="position-absolute top-0 end-0 bg-white" src="img/images/videos/Screenshot20241225191425.png"
                             alt="" style="width: 200px; height: 200px; box-shadow: 0 8px 5px rgb(0 0 0 / 52%);">
                         <!--? video_start -->
                         <div class="position-absolute top-0 end-0 bg-white ps-2 pb-2">
@@ -663,7 +669,7 @@
                             المانحة والمشاركة في هذا التطوير والمساهمة في بناء المدارس الحكومية وإمدادها بالأجهزة العلمية والتكنولوجية المتطورة
                             بإنشاء المركز.
                         </p>
-                        <a class="btn btn-primary py-2 px-3 me-3" href="Objectives.html">
+                        <a class="btn btn-primary py-2 px-3 me-3" href="objectives.html">
                             اقراء المزيد
                             <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
                                 <i class="fa fa-arrow-left"></i>
