add gallery page

--- a/index.html
+++ b/index.html
@@ -77,35 +77,35 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto p-4 p-lg-0" style="position: absolute; right: 365px;">
                     <a href="index.html" class="nav-item nav-link active">الرئيسية</a>
-                    <a href="index.html" class="nav-item nav-link">الداعمين للجمعية</a>
+                    <a href="#" class="nav-item nav-link">الداعمين للجمعية</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">الانشطة</a>
                         <div class="dropdown-menu m-0">
-                            <a href="service.html" class="dropdown-item">المؤتمرات</a>
-                            <a href="donate.html" class="dropdown-item">الاحتفالات</a>
-                            <a href="team.html" class="dropdown-item">الندوات</a>
+                            <a href="#" class="dropdown-item">المؤتمرات</a>
+                            <a href="#" class="dropdown-item">الاحتفالات</a>
+                            <a href="#" class="dropdown-item">الندوات</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المركز الاعلامى</a>
                         <div class="dropdown-menu m-0">
-                            <a href="service.html" class="dropdown-item">البوم الصور </a>
-                            <a href="donate.html" class="dropdown-item">الفديوهات</a>
+                            <a href="album-photo.html" class="dropdown-item">البوم الصور </a>
+                            <a href="#" class="dropdown-item">الفديوهات</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المساعدات</a>
                         <div class="dropdown-menu m-0">
-                            <a href="service.html" class="dropdown-item"> المشروعات</a>
-                            <a href="donate.html" class="dropdown-item">المبادرات</a>
+                            <a href="#" class="dropdown-item"> المشروعات</a>
+                            <a href="#" class="dropdown-item">المبادرات</a>
                         </div>
                     </div>
-                    <a href="about.html" class="nav-item nav-link"> تبرع الان</a>
+                    <a href="#" class="nav-item nav-link"> تبرع الان</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"> من نحن</a>
                         <div class="dropdown-menu m-0">
-                            <a href="service.html" class="dropdown-item"> مجلس ادارة الجمعية </a>
-                            <a href="service.html" class="dropdown-item"> نشأة الجمعية</a>
+                            <a href="#" class="dropdown-item"> مجلس ادارة الجمعية </a>
+                            <a href="#" class="dropdown-item"> نشأة الجمعية</a>
                             <a href="objectives.html" class="dropdown-item">اهداف الجمعية</a>
                         </div>
                     </div>
@@ -645,39 +645,23 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="h-100">
                         <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">من نحن</div>
-                        <h1 class="display-6 mb-5">أهداف جمعية مهندسى البترول والتعدين والغاز (SPE)</h1>
-                        <div class="bg-light border-bottom border-5 border-primary rounded p-4 mb-4">
-                            <p class="text-dark mb-2">
-                            • إجراء دراسات فنية متعلقة بالبترول ومصادر الطاقة الأخرى وقضايا عربية وعالمية وتنظيم الندوات واللقاءات المتعلقة بها                                 </p>
-                            <p class="text-dark mb-2">
-                            • تحليل السوق العالمى للبترول باستخدام المفاهيم الاقتصادية حيث تتعرض الأسواق للمنافسة الكاملة والاحتكار.                            </p>
-                            <p class="text-dark mb-2">
-                            • رصد آثار تقلبات أسعار البترول على الدول الصناعية والمصدرة والنامية غير المصدرة للبترول مع التفرقة بين حالات ارتفاع
-                            الأسعار وانخفاضها.
-                            </p>
-                            <p class="text-dark mb-2">
-                            • دراسة قواعد تسعير زيت البترول الخام وتطور أسعار البترول منذ اكتشافه تجارياً وحتى الآن مع التركيز على أهم الأحداث في كل
-                            عقد من الزمان مثل إنشاء أوبك واستخدام زيت البترول كسلاح سياسى.
-                            </p>
-                            <!--<span class="text-primary">Jhon Doe, Founder</span>-->
-                        </div>
-                        <p class="mb-5">
-                            <h4 class="mb-5">تنمية المجتمعات المحلية</h4>
+                        <h2 class="display-6 mb-5">أهداف جمعية مهندسى البترول والتعدين والغاز (SPE)</h2>
+                        <h4 class="mb-3">تنمية المجتمعات المحلية</h4>
+                        <p class="mb-3">
                             وذلك بتبنى مشروعات تطوير وتجديد مبانى المدارس الحكومية في المناطق الأكثر احتياجاً في كافة أنحاء الجمهورية والعمل على رفع
                             كفاءة البيئة المحلية المحيطة بهذه المدارس من طرق ومرافق ورفع كفاءات جميع القائمين على العملية التعليمية من مدرسين
                             ومديرين بعقد الدورات التدريبية المتخصصة لهم من خلال شركات متخصصة في التدريب وعقد الاتفاقيات والبروتوكلات مع الجهات
                             المانحة والمشاركة في هذا التطوير والمساهمة في بناء المدارس الحكومية وإمدادها بالأجهزة العلمية والتكنولوجية المتطورة
                             بإنشاء المركز.
                         </p>
+                        <p class="mb-3">
+                            كما تشمل تنمية المجتمعات المحلية إقامة الندوات والمؤتمرات لحماية المستهلك والحفاظ على البيئة وتبنى مشروعات التشجير
+                            والتجميل والحفاظ على التراث المعمارى والهندسى والتنسيق الحضارى بالإضافة إلى التعاون مع الصندوق الاجتماعى في تنمية
+                            المشروعات الصغيرة في القرى وفى الأرياف للمعاونة على حل مشكلة البطالة.
+                        </p>
                         <a class="btn btn-primary py-2 px-3 me-3" href="objectives.html">
                             اقراء المزيد
                             <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
-                                <i class="fa fa-arrow-left"></i>
-                            </div>
-                        </a>
-                        <a class="btn btn-outline-primary py-2 px-3" href="">
-                            تواصل معنا
-                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                                 <i class="fa fa-arrow-left"></i>
                             </div>
                         </a>
