--- a/index.html
+++ b/index.html
@@ -360,9 +360,9 @@
 
                 <div class="col-lg-4 col-md-6 portfolio-item second wow zoomIn" data-wow-delay="0.6s">
                     <div class="position-relative rounded overflow-hidden">
-                        <img class="img-fluid w-100" src="img/images/Initiatives/Image20241230.jpeg" alt="">
+                        <img class="img-fluid w-100" src="img/images/Initiatives/9073b9f9-4b95-438b-9f63-53857c93e7aa.jpg" alt="">
                         <div class="portfolio-overlay">
-                            <a class="btn btn-light" href="img/images/Initiatives/Image20241230.jpeg" data-lightbox="portfolio"><i
+                            <a class="btn btn-light" href="img/images/Initiatives/9073b9f9-4b95-438b-9f63-53857c93e7aa.jpg" data-lightbox="portfolio"><i
                                     class="fa fa-plus fa-2x text-primary"></i></a>
                             <div class="mt-auto">
                                 <small class="text-white"><i class="fa fa-folder me-2"></i> كرتونة رمضان</small>
@@ -659,6 +659,26 @@
                             والتجميل والحفاظ على التراث المعمارى والهندسى والتنسيق الحضارى بالإضافة إلى التعاون مع الصندوق الاجتماعى في تنمية
                             المشروعات الصغيرة في القرى وفى الأرياف للمعاونة على حل مشكلة البطالة.
                         </p>
+                        <div class="row gy-2 gx-4 mb-4" style="text-align: left;">
+                            <div class="col-sm-6">
+                                <p class="mb-0"> الندوات<i class="fa fa-arrow-right text-primary me-2"></i></p>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="mb-0"> المحاضرات<i class="fa fa-arrow-right text-primary me-2"></i></p>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="mb-0">المجال الاجتماعى<i class="fa fa-arrow-right text-primary me-2"></i></p>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="mb-0">التأهيل والتشغيل<i class="fa fa-arrow-right text-primary me-2"></i></p>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="mb-0">الخدمات الصحية<i class="fa fa-arrow-right text-primary me-2"></i></p>
+                            </div>
+                            <div class="col-sm-6">
+                                <p class="mb-0">التوعية الجماهيرية<i class="fa fa-arrow-right text-primary me-2"></i></p>
+                            </div>
+                        </div>
                         <a class="btn btn-primary py-2 px-3 me-3" href="objectives.html">
                             اقراء المزيد
                             <div class="d-inline-flex btn-sm-square bg-white text-primary rounded-circle ms-2">
@@ -673,7 +693,7 @@
     <!-- About End -->
 
      <!-- Seminars Start -->
-     <div class="container-xxl py-5">
+     <div class="container-xxl py-5" style="background: #F8F8F9;">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">الاحفالات و الندوات</div>
@@ -870,7 +890,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-xxl py-5" style="direction: ltr;">
+    <div class="container-xxl py-5" style="direction: ltr; background: #F8F8F9;">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">شركاء النجاح</div>
@@ -908,7 +928,7 @@
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark text-white-50 footer  pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
