update album page and make folder for images

--- a/objectives.html
+++ b/objectives.html
@@ -86,7 +86,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المركز الاعلامى</a>
                         <div class="dropdown-menu m-0">
-                            <a href="album-photo.html" class="dropdown-item">البوم الصور </a>
+                            <a href="album.html" class="dropdown-item">البوم الصور </a>
                             <a href="#" class="dropdown-item">الفديوهات</a>
                         </div>
                     </div>
