--- a/photo-kirtunat-alkhayr.html
+++ b/photo-kirtunat-alkhayr.html
@@ -89,7 +89,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">المركز الاعلامى</a>
                         <div class="dropdown-menu m-0">
-                            <a href="album-photo.html" class="dropdown-item">البوم الصور </a>
+                            <a href="album.html" class="dropdown-item">البوم الصور </a>
                             <a href="#" class="dropdown-item">الفديوهات</a>
                         </div>
                     </div>
@@ -126,14 +126,14 @@
 
 
     <!-- Page Header Start -->
-    <div class="container-fluid page-header-about mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid page-header-album mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center" style="direction: ltr;">
-            <h1 class="display-4 text-white animated slideInDown mb-4"> أهداف الجمعية</h1>
+            <h1 class="display-4 text-white animated slideInDown mb-4"> صور مبادرة كرتونة الخير </h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item text-primary active" aria-current="page"> أهداف الجمعية</li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">من نحن</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">الرئيسية</a></li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page"> صور مبادرة كرتونة الخير</li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">البوم صور</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">المركز الاعلامى</a></li>
                 </ol>
             </nav>
         </div>
@@ -145,7 +145,8 @@
         <div class="mx-auto text-center mb-5" style="max-width: 900px;">
             <h5 class="section-title px-3">البوم الصور</h5>
             <h1 class="mb-4">صور من توزيع كرتونة الخير</h1>
-            <p class="mb-0">مشاركة شيوخ الازهر فى مبادرة كرتونة الخير
+            <p class="mb-0">
+                مشاركة الشيخ احمد ترك فى مبادرة كرتونة الخير
             </p>
         </div>
         <div class="tab-class text-center">
@@ -186,7 +187,7 @@
                     <div class="row g-2">
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-2">
                             <div class="gallery-item h-100">
-                                <img src="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.19.07 AM (1).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
+                                <img src="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.19.07 AM (1).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
                                 <div class="gallery-content">
                                     <!-- <div class="gallery-info">
                                         <h5 class="text-white text-uppercase mb-2">World Tour</h5>
@@ -195,7 +196,7 @@
                                     </div> -->
                                 </div>
                                 <div class="gallery-plus-icon">
-                                    <a href="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.19.07 AM (1).jpeg" data-lightbox="gallery-1" class="my-auto"><i
+                                    <a href="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.19.07 AM (1).jpeg" data-lightbox="gallery-1" class="my-auto"><i
                                             class="fas fa-plus fa-2x text-white"></i></a>
                                 </div>
                             </div>
@@ -203,7 +204,7 @@
 
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="gallery-item h-100">
-                                <img src="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM (1).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
+                                <img src="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM (1).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
                                 <div class="gallery-content">
                                     <!-- <div class="gallery-info">
                                         <h5 class="text-white text-uppercase mb-2">World Tour</h5>
@@ -212,7 +213,7 @@
                                     </div> -->
                                 </div>
                                 <div class="gallery-plus-icon">
-                                    <a href="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM (1).jpeg" data-lightbox="gallery-2" class="my-auto"><i
+                                    <a href="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM (1).jpeg" data-lightbox="gallery-2" class="my-auto"><i
                                             class="fas fa-plus fa-2x text-white"></i></a>
                                 </div>
                             </div>
@@ -220,7 +221,7 @@
 
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-2">
                             <div class="gallery-item h-100">
-                                <img src="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM (2).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
+                                <img src="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM (2).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
                                 <div class="gallery-content">
                                     <!-- <div class="gallery-info">
                                         <h5 class="text-white text-uppercase mb-2">World Tour</h5>
@@ -229,7 +230,7 @@
                                     </div> -->
                                 </div>
                                 <div class="gallery-plus-icon">
-                                    <a href="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM (2).jpeg" data-lightbox="gallery-3" class="my-auto"><i
+                                    <a href="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM (2).jpeg" data-lightbox="gallery-3" class="my-auto"><i
                                             class="fas fa-plus fa-2x text-white"></i></a>
                                 </div>
                             </div>
@@ -237,7 +238,7 @@
                         
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="gallery-item h-100">
-                                <img src="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM.jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
+                                <img src="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM.jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
                                 <div class="gallery-content">
                                     <!-- <div class="gallery-info">
                                         <h5 class="text-white text-uppercase mb-2">World Tour</h5>
@@ -246,7 +247,7 @@
                                     </div> -->
                                 </div>
                                 <div class="gallery-plus-icon">
-                                    <a href="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM.jpeg" data-lightbox="gallery-4" class="my-auto"><i
+                                    <a href="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.13 AM.jpeg" data-lightbox="gallery-4" class="my-auto"><i
                                             class="fas fa-plus fa-2x text-white"></i></a>
                                 </div>
                             </div>
@@ -254,7 +255,7 @@
 
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-2">
                             <div class="gallery-item h-100">
-                                <img src="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (1).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
+                                <img src="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (1).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
                                 <div class="gallery-content">
                                     <!-- <div class="gallery-info">
                                         <h5 class="text-white text-uppercase mb-2">World Tour</h5>
@@ -263,7 +264,7 @@
                                     </div> -->
                                 </div>
                                 <div class="gallery-plus-icon">
-                                    <a href="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (1).jpeg" data-lightbox="gallery-5" class="my-auto"><i
+                                    <a href="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (1).jpeg" data-lightbox="gallery-5" class="my-auto"><i
                                             class="fas fa-plus fa-2x text-white"></i></a>
                                 </div>
                             </div>
@@ -271,7 +272,7 @@
 
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-2">
                             <div class="gallery-item h-100">
-                                <img src="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (2).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
+                                <img src="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (2).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
                                 <div class="gallery-content">
                                     <!-- <div class="gallery-info">
                                         <h5 class="text-white text-uppercase mb-2">World Tour</h5>
@@ -280,7 +281,7 @@
                                     </div> -->
                                 </div>
                                 <div class="gallery-plus-icon">
-                                    <a href="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (2).jpeg" data-lightbox="gallery-6" class="my-auto"><i
+                                    <a href="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (2).jpeg" data-lightbox="gallery-6" class="my-auto"><i
                                             class="fas fa-plus fa-2x text-white"></i></a>
                                 </div>
                             </div>
@@ -288,7 +289,7 @@
 
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
                             <div class="gallery-item h-100">
-                                <img src="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (3).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
+                                <img src="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (3).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
                                 <div class="gallery-content">
                                     <!-- <div class="gallery-info">
                                         <h5 class="text-white text-uppercase mb-2">World Tour</h5>
@@ -297,7 +298,7 @@
                                     </div> -->
                                 </div>
                                 <div class="gallery-plus-icon">
-                                    <a href="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (3).jpeg" data-lightbox="gallery-7" class="my-auto"><i
+                                    <a href="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (3).jpeg" data-lightbox="gallery-7" class="my-auto"><i
                                             class="fas fa-plus fa-2x text-white"></i></a>
                                 </div>
                             </div>
@@ -305,7 +306,7 @@
 
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-2">
                             <div class="gallery-item h-100">
-                                <img src="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM.jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
+                                <img src="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM.jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
                                 <div class="gallery-content">
                                     <!-- <div class="gallery-info">
                                         <h5 class="text-white text-uppercase mb-2">World Tour</h5>
@@ -314,7 +315,7 @@
                                     </div> -->
                                 </div>
                                 <div class="gallery-plus-icon">
-                                    <a href="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM.jpeg" data-lightbox="gallery-8" class="my-auto"><i
+                                    <a href="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM.jpeg" data-lightbox="gallery-8" class="my-auto"><i
                                             class="fas fa-plus fa-2x text-white"></i></a>
                                 </div>
                             </div>
@@ -322,7 +323,7 @@
                         
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-3">
                             <div class="gallery-item h-100">
-                                <img src="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (5).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
+                                <img src="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (5).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
                                 <div class="gallery-content">
                                     <!-- <div class="gallery-info">
                                         <h5 class="text-white text-uppercase mb-2">World Tour</h5>
@@ -331,7 +332,7 @@
                                     </div> -->
                                 </div>
                                 <div class="gallery-plus-icon">
-                                    <a href="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (5).jpeg" data-lightbox="gallery-9" class="my-auto"><i
+                                    <a href="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (5).jpeg" data-lightbox="gallery-9" class="my-auto"><i
                                             class="fas fa-plus fa-2x text-white"></i></a>
                                 </div>
                             </div>
@@ -339,7 +340,7 @@
 
                         <div class="col-sm-6 col-md-6 col-lg-3 col-xl-2">
                             <div class="gallery-item h-100">
-                                <img src="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (1).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
+                                <img src="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (1).jpeg" class="img-fluid w-100 h-100 rounded" alt="Image">
                                 <div class="gallery-content">
                                     <!-- <div class="gallery-info">
                                         <h5 class="text-white text-uppercase mb-2">World Tour</h5>
@@ -348,7 +349,7 @@
                                     </div> -->
                                 </div>
                                 <div class="gallery-plus-icon">
-                                    <a href="img/images/كرتونه الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (1).jpeg" data-lightbox="gallery-10" class="my-auto"><i
+                                    <a href="img/images/كرتونة-الخير/WhatsApp Image 2024-12-30 at 6.23.14 AM (1).jpeg" data-lightbox="gallery-10" class="my-auto"><i
                                             class="fas fa-plus fa-2x text-white"></i></a>
                                 </div>
                             </div>
