update index prtfolio

--- a/index.html
+++ b/index.html
@@ -277,18 +277,22 @@
                 </div>
                 <!--<h2 class="mt-2">Recently Launched Projects</h2>-->
             </div>
-            <div class="row mt-n2 wow fadeInUp mb-3" data-wow-delay="0.1s" style="border: 4px solid #3333330f; border-radius: 25px;">
+            <div class="row mt-n2 wow fadeInUp mb-3" data-wow-delay="0.1s" 
+                                    style="border: 4px solid #3333330f; border-radius: 25px;
+                                        margin: 0px 100px 0px 100px;
+                                        box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+                                    ">
                 <div class="col-12 text-center">
                     <ul class="list-inline mb-5" id="portfolio-flters">
-                        <li class="btn px-3 pe-4 active" data-filter="*">الكل</li>
-                        <li class="btn px-3 pe-4" data-filter=".first">مشروعات</li>
-                        <li class="btn px-3 pe-4" data-filter=".second">مبادرات</li>
+                        <li class="btn px-3 pe-4 active" data-filter="*" style="position: relative; top: 20px; font-weight: bold;">الكل</li>
+                        <li class="btn px-3 pe-4" data-filter=".first"   style="position: relative; top: 20px; font-weight: bold;">مشروعات</li>
+                        <li class="btn px-3 pe-4" data-filter=".second"  style="position: relative; top: 20px; font-weight: bold;">مبادرات</li>
                     </ul>
                 </div>
             </div>
 
             <div class="row g-4 portfolio-container">
-                <div class="col-lg-4 col-md-6 portfolio-item first wow zoomIn" data-wow-delay="0.1s">
+                <div class="col-lg-4 col-md-6 py-3 portfolio-item first wow zoomIn" data-wow-delay="0.1s">
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Projects/2-2-1.png.webp" alt="">
                         <div class="portfolio-overlay">
@@ -302,7 +306,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 portfolio-item second wow zoomIn" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-6 py-3 portfolio-item second wow zoomIn" data-wow-delay="0.3s">
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Projects/3-3.png.webp" alt="">
                         <div class="portfolio-overlay">
@@ -316,7 +320,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 portfolio-item first wow zoomIn" data-wow-delay="0.6s">
+                <div class="col-lg-4 col-md-6 py-3 portfolio-item first wow zoomIn" data-wow-delay="0.6s">
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Projects/7-6-2.png.webp" alt="">
                         <div class="portfolio-overlay">
@@ -330,7 +334,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 portfolio-item second wow zoomIn" data-wow-delay="0.1s">
+                <div class="col-lg-4 col-md-6 py-3 portfolio-item second wow zoomIn" data-wow-delay="0.1s">
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Projects/shefaa.jpeg" alt="">
                         <div class="portfolio-overlay">
@@ -344,7 +348,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 portfolio-item first wow zoomIn" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-6 py-3 portfolio-item first wow zoomIn" data-wow-delay="0.3s">
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Initiatives/2-6.png" alt="">
                         <div class="portfolio-overlay">
@@ -358,7 +362,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 portfolio-item second wow zoomIn" data-wow-delay="0.6s">
+                <div class="col-lg-4 col-md-6 py-3 portfolio-item second wow zoomIn" data-wow-delay="0.6s">
                     <div class="position-relative rounded overflow-hidden">
                         <img class="img-fluid w-100" src="img/images/Initiatives/9073b9f9-4b95-438b-9f63-53857c93e7aa.jpg" alt="">
                         <div class="portfolio-overlay">
