--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <div class="row mt-n2 wow fadeInUp mb-3" data-wow-delay="0.1s" 
                                     style="border: 4px solid #3333330f; border-radius: 25px;
                                         margin: 0px 100px 0px 100px;
-                                        box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+                                        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
                                     ">
                 <div class="col-12 text-center">
                     <ul class="list-inline mb-5" id="portfolio-flters">
